# combat_engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Code_Review_Report.md  GEMINI.md  MIGRATION_PR8.md  PR_Data_Driven_Entites.md  PR_finish_RNG_rollout.md  README.md  all-project-code_post_PR_P1S3.txt  bundle-project.bat  combat_engine_full_bundle.txt  demo_item.py  final_test_results.txt  package-lock.json  pyproject.toml  requirements.txt  run_dashboard.ps1  run_full_test.py  run_phase1_test.py  run_phase2_test.py  run_phase3_test.py  run_simulation.py  simulation_report.json  task_progress_ui2.txt  test_data.py  test_data_load.py  test_output.txt  test_output2.txt  test_output_final.txt  test_output_final_pass.txt  test_output_full.txt  test_output_verify.txt  test_output_verify_2.txt  test_output_verify_final.txt  test_phase2.py  test_phase3.py  test_phase4.py  test_pr_p1s3.py  test_results.txt  (+4 more)
blueprints/: affixes.yaml  families.yaml  scaling.yaml
dashboard/: app.py  utils.py
dashboard/components/: battle_log.py  entity_card.py  forge_editors.py  item_card.py  weapon_comparison.py
dashboard/pages/: 1_The_Forge.py  2_The_Arena.py  3_The_Coliseum.py  4_Campaign.py
data/: affix_pools.csv  affixes.csv  affixes_old.csv  base_affixes.csv  base_items.csv  effects.csv  entities.csv  game_data.json  items.csv  loot_tables.csv  quality_tiers.csv  skills.csv
docs/: 15.11 code base report.md  Combat_Engine_Architecture.md  GDD CoreCombatSystems&Affixes IP.md  GDD CoreCombatSystems&Affixes.md  PR for code report.md  PR-P1S1.md  PR-P1S2.md  PR-P1S3.md  PR-P2S4 - detailed.md  PR-P2S4.md  PR-P2S5.md  PR-P3S6.md  PR-P3S7.md  PR-P3S8.md  PR1.md  PR2.md  PR3.md  PR4.md  PR5.md  PR6.md  PR7.md  PR8.md  Procedural_Item_Extension_Guide.md  Production_Ready_Engine.md  Project_Spec_Gladiator_Engine_Dashboard.md  Remedy.md  architecture.md  damage_pipeline.md  data_pipeline.md  state_and_lifecycle.md
docs/design/: attack_speed_design.md  core progression loop.md  damage_system.md
docs/dev_handoffs/: DH Phase B1 - Entity Data Structure.md  DH Phase C1 - Loot Data Handoff.md  DH_Enemy-Portrait-UI.md  (+18 more)
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: build_content.py  demo_item.py  test_loot_drop.py  test_loot_simulation.py  weapon_balance_analyzer.py
src/: __init__.py  combat.py  combat_math.py  combat_orchestrator.py  data_loader.py  data_parser.py  effect_handlers.py  engine.py  events.py  game_data_provider.py  handlers.py  item_generator.py  models.py  simulation.py  state.py
tests/: fixtures.py  test_affix_pools.py  test_aggregators.py  test_archetype_balance.py  test_batch_determinism.py  test_combat_math.py  test_cross_reference_validation.py  test_data_parser.py  test_effect_handlers.py  test_enemy_portrait_ui.py  test_engine.py  test_entity_data.py  test_entity_factory.py  test_entity_portrait_data.py  test_event_bus_pr3.py  test_events.py  test_exporters.py  test_fixtures.py  test_game_session.py  test_hero_portrait_ui.py  test_hitcontext.py  test_integration.py  test_inventory.py  test_item_generator.py  test_item_generator_strict.py  test_lifecycle.py  test_loot_integration.py  test_loot_manager.py  test_loot_validation.py  test_models.py  test_orchestrator.py  test_phase3_rng_integration.py  test_portrait_loading.py  test_pr6_integration.py  test_simulation.py  test_skills.py  test_state.py  test_state_strict.py  test_stock_content.py  test_telemetry.py  (+5 more)
(+92 files in other folders)
